--- a/_posts/2017-06-23-cpp-Flux.markdown
+++ b/_posts/2017-06-23-cpp-Flux.markdown
@@ -780,3 +780,22 @@ multimap<string, double> noteS_parBranche; // clé dupliquée
 
 ```
 
+
+
+
+Une platforme d'évaluation (critique?) anonyme (youtube like) mais avec login à creditential fort (via fb, gmail, ...).
+    => trouver un moyen (stackoverflow like) d'obliger la critique constructive et objective
+
+* pour tous les domaines
+    * écoles
+    * entreprise
+    * administrations
+    * propriétaires 
+    * ...
+
+* Dans un monde où les forts se pensent intouchable et tendent à faire n'importe quoi car ils savent que dans de nombreux cas ils sont impunis ce système à la sauce tripAdvisor pousse via contrainte sociale forte les gestionnaires à ne pas faire ce qu'ils veulent de peur de s'afficher.
+
+* 
+
+
+
