--- a/_posts/2017-06-27-idee.markdown
+++ b/_posts/2017-06-27-idee.markdown
@@ -41,7 +41,7 @@ Dans de nombreux domaines les patrons, les propriétaires, les professeurs, ... 
 mais aussi:
 
 * maneuvres d'intimidation du litigeur 
-* condésendance du litigeur
+* condécendance du litigeur
 * ...
 
 Dans des cas comme l'enseignement
@@ -49,6 +49,9 @@ Dans des cas comme l'enseignement
 * peur de passer pour un con
 * endoctrinement au culte de l'autorité
 * "de toutes façons ça sert à rien"
+* ignorance des standards lié à la qualité du support de cours ou de l'enseignant
+* ...
+
 
 
 Ces points et de nombreux autres créent une inertie indésirable. Dans de nombreux cas les forts qui "abusent" des "faibles" le font à répétition, ils développent même une sorte d'expertise dans le domaine et réduisent encore plus les chances des "faibles" de se défendre. 
@@ -117,6 +120,10 @@ Concernant les technologies employé par le projet présenté ici de nombreuses 
 
 
 
+### En vrac
 
+Ce système peut créér des injustices et peut être confronté à de vives critiques. 
 
+Je pense que les éventuelles injustices créées par ce système sont négligeable en comparaison du nombre de situations injustes qu'il permet de normaliser. 
 
+Gardons en tête que les principales personnes lésés par ce système sont les personnes qui abusent à l'heure actuelle d'autres impunément. Ce sont principalement elles qui risquent de se pleindre car leur influance, pouvoir finnancier ou autres status social ne sera pour une fois pas une arme éfficace pour leur permettre de continuer à se livrer à leur comportements litigieux.
