--- a/_posts/2017-06-27-idee.markdown
+++ b/_posts/2017-06-27-idee.markdown
@@ -88,25 +88,25 @@ De façon surprenante, certains domaines sont épargnés et les trois cités dan
 
 Dans l'établissement que je fréquente, nous reçevons des questionnaires d'évaluation annonymes pour évaluer le corp professoral. Ces résultats sont transformé en statistiques par des employés de la même école. 
 
-Non seulement les éléments factuels que les élèves ont pris le temps de rédiger sont perdu et ne sont gardé que les cotes mais il est évident que la partialité des résultats est hautement discutable car ces mêmes résultats sont affichés sur le site de l'école pour justifier la qualité de l'école.
+Non seulement les éléments factuels que les élèves ont pris le temps de rédiger sont perdu et ne sont gardé que les cotes mais il est évident que la neutralité des résultats est hautement discutable car ces mêmes résultats sont affichés sur le site de l'école pour justifier la qualité de l'école.
 
 C'est un peu comme demander aux élèves de se noter entre eux en gardant en tête que le score individuel a autant d'importance que le score global de la classe.
 
-Il en résulte des cas comme celui d'un prof qui ne donnait cours qu'à notre classe, dont les méthodes ont été largement critiqué entre les élèves et ce prof se retrouvant avec une cote totalement incompréhensible.
+Il en résulte des cas comme celui d'un prof qui ne donnait cours qu'à notre classe, dont les méthodes ont été largement critiqué entre les élèves et ce prof se retrouvant avec une cote largement positive.
 
-### Solution
+### Solution (avec les premiers jets d'idées d'implémentation)
 
 Une platforme dédiée à la l'évaluation/critique des éléments atomiques constituant les diverses entités de notre société me semble combler une niche innexistante pour le moment.
 
 Nous pouvons immaginer un site web du type de tripAdvisor où les utilisateurs sont invités à **critiquer de façon constructive** non pas une organisation entière car c'est rarement toute l'organisation qui est la cause du litige mais un membre constituant de cet organisation.
 
-Les critique peuvent être anonymes mais l'accès au droit de critique se fait via une authentification avec un créditential fort. À la façon des commentaires de youtube qui utilise un compte gmail pour authentifier l'utilisateur mais permet à l'utilisateur si il le souhaite de poster sous un pseudonyme et en empéchant les autres utilisateurs d'avoir accès à son identité. Cette technique est un premier filtre pour empécher les gens de faire tout et n'importe quoi. On est moins enclains à faire de la merde quand notre identité est accessible pour les modérateurs. Même si ça n'empèche pas d'avoirs des commentaires de faible qualité, celà empêche les dérives de sites totalements annonymes.
+Les critique peuvent être anonymes mais l'accès au droit de critique se fait via une authentification avec un créditential fort. À la façon des commentaires de youtube qui utilise un compte gmail pour authentifier l'utilisateur mais permet à l'utilisateur si il le souhaite de poster sous un pseudonyme et en empéchant les autres utilisateurs d'avoir accès à son identité. Cette technique est un premier filtre pour empécher les gens de faire tout et n'importe quoi. On est moins enclains à faire de la merde quand notre identité est accessible pour les modérateurs. Même si ça n'empèche pas d'avoirs des commentaires de faible qualité, celà empêche les dérives de sites totalements annonymes. De plus cette façon de faire encourrage les membres d'une certaine organisation (qui sont les plus au courrant de ce qu'il s'y passe) à poster des critiques sans avoir peur pour leur position ou status social.
 
-Le réseau Stack Exchange (Stack Overflow, Ask Ubuntu, Super User,...) est un bon exemple d'un système qui pourait être implémenté pour jauger la **qualité des critiques**. Sur ce réseau, les utilisateurs peuvent poser des questions et soumettre des réponses. Ils sont ensuite récompensés par les autres utilisateurs par un système de vote permettant d'approuver (up vote) ou de sanctionner (down vote) l'utilisateur via des points de "karma", nommées réputation sur le réseau. Ainsi, les réponses de meilleur qualité sont mises en avant par leurs nombres de votes.Ce genre de réseau est la preuve qu'une "board de discussion" peut être absente de phénomènes de trolling. 
+Le réseau Stack Exchange (Stack Overflow, Ask Ubuntu, Super User,...) est un bon exemple d'un système qui pourait être implémenté pour jauger la **qualité des critiques**. Sur ce réseau, les utilisateurs peuvent poser des questions et soumettre des réponses. Ils sont ensuite récompensés par les autres utilisateurs par un système de vote permettant d'approuver (up vote) ou de sanctionner (down vote) l'utilisateur via des points de "karma", nommées réputation sur le réseau. Ainsi, les réponses de meilleur qualité sont mises en avant par leurs nombres de votes. Ce genre de réseau est la preuve qu'une "board de discussion" peut être absente de phénomènes de trolling. 
 
-Le site présenté ici n'a pas vocation à être un forum de discussion (d'autres solutions peuvent être envisagées pour couvrir cet aspect). Ici, l'accent est mis sur le caractère objectif des commentaires.
+Le site présenté ici n'a pas vocation à être un forum de discussion (d'autres solutions peuvent être envisagées pour couvrir cet aspect). Ici, l'accent est mis sur le caractère objectif des commentaires et des cotes.
 
-Pour reprendre l'exemple de Stack Exchange et plus particulièrement stack overflow, ce site est totalement absent de troll et les informations que nous retrouvons en tête des divers sujets sont uniquement des réponses pertinentes et absentes de jugements de valeur et à but informatif. Dans le milieux de la programmation il est la ressource informative numéro 1 créé par la communauté, pour la communuté.
+Pour reprendre l'exemple de Stack Exchange et plus particulièrement stack overflow, ce site est totalement absent de troll et les informations que nous retrouvons en tête des divers sujets sont uniquement des réponses pertinentes, absentes de jugements de valeur et à but informatif. 
 
 
 
@@ -114,7 +114,7 @@ Pour reprendre l'exemple de Stack Exchange et plus particulièrement stack overf
 
 Cet outil est à double tranchant. Non seulement il permet à un utilisateur de se faire une idée concernant une organistion mais elle permet également de créér un sentiment de crainte chez les personnes qui tendent à abuser des droits des autres.
 
-tripAdvisor apporte beaucoup à la transparance et à l'éviction de l'arnaque. Il permet d'un coté à l'utilisateur de jauger la qualité du lieux et d'un autre coté **oblige les établissements à fournir un service de qualité de peur de sombrer dans les abimes du ranking** et d'avoir une faible visibilité pour les nombreux utilisateurs qui utilisent ce site pour le choix de leurs divers choix. C'est doublement bénéfique et apporte une solution pour lutter éfficacement contre l'arnaque.
+tripAdvisor apporte beaucoup à la transparance et à l'éviction de l'arnaque. Il permet d'un coté à l'utilisateur de jauger la qualité du lieux et d'un autre coté **oblige les établissements à fournir un service de qualité de peur de sombrer dans les abimes du ranking** et d'avoir une faible visibilité pour les nombreux utilisateurs qui utilisent ce site pour leurs divers choix. C'est doublement bénéfique et apporte une solution pour lutter éfficacement contre l'arnaque.
 
 Concernant les technologies employé par le projet présenté ici de nombreuses technique peuvent être emprunté au plateforme déja existantes et être adptés pour pemetre la création d'une nouvelle platforme qui bataillerait dans une autre niche d'autres formes de maux de notre société.
 
