--- a/_posts/2017-06-27-idee.markdown
+++ b/_posts/2017-06-27-idee.markdown
@@ -118,6 +118,8 @@ tripAdvisor apporte beaucoup à la transparance et à l'éviction de l'arnaque. 
 
 Concernant les technologies employé par le projet présenté ici de nombreuses technique peuvent être emprunté au plateforme déja existantes et être adptés pour pemetre la création d'une nouvelle platforme qui bataillerait dans une autre niche d'autres formes de maux de notre société.
 
+Ces lignes ne sont qu'un premier jet et de nombreux éléments restent à définir mais je pense que l'idée est posée.
+
 
 
 ### En vrac
@@ -127,3 +129,5 @@ Ce système peut créér des injustices et peut être confronté à de vives cri
 Je pense que les éventuelles injustices créées par ce système sont négligeable en comparaison du nombre de situations injustes qu'il permet de normaliser. 
 
 Gardons en tête que les principales personnes lésés par ce système sont les personnes qui abusent à l'heure actuelle d'autres impunément. Ce sont principalement elles qui risquent de se pleindre car leur influance, pouvoir finnancier ou autres status social ne sera pour une fois pas une arme éfficace pour leur permettre de continuer à se livrer à leur comportements litigieux.
+
+
