--- a/_posts/2017-06-27-idee.markdown
+++ b/_posts/2017-06-27-idee.markdown
@@ -5,6 +5,11 @@ date: 2017-06-27
 finished: false
 ---
 
+## Préambule
+
+Cette page contient les premiers jets d'une idée qui me semble avoir du potentiel.
+Les grandes lignes y sont mais de nombreux points sont vagues et restent à être définis. Le but de la page n'est pas de faire un descriptif des détails d'implémentation et bien que certaines références s'y trouvent ces dernières ne sont que des repères pour aider à conceptualiser l'idée d'un point de vue plus technique.
+
 
 ## Abstract
 
