--- a/_posts/2017-06-23-cpp-Flux.markdown
+++ b/_posts/2017-06-23-cpp-Flux.markdown
@@ -910,3 +910,38 @@ output:
 ```
 Physique===> 4.5
 ```
+
+### Solution problème day 6 hackerRank (map)
+
+[lien](https://www.hackerrank.com/challenges/30-dictionaries-and-maps/problem)  
+
+```cpp
+#include<iostream>
+#include<string>
+#include<map>
+using namespace std;
+
+
+int main() {
+    int n;
+    string name;
+    int num;
+    cin >> n;
+    cin.ignore();
+    map <string, long> pBook;
+    for (int i = 0; i < n; i++) {
+        cin >> name;
+        cin >> num;
+        pBook[name] = num;
+    }
+    while(cin >> name) {
+        if (pBook.find(name) != pBook.end()) {
+            cout << name << "=" << pBook.find(name)->second << endl;
+        } else {
+            cout << "Not found" << endl;
+        }
+    }
+
+    return 0;
+}
+```
