--- a/_posts/2017-06-23-cpp-Flux.markdown
+++ b/_posts/2017-06-23-cpp-Flux.markdown
@@ -945,3 +945,7 @@ int main() {
     return 0;
 }
 ```
+
+## Choix d'un conteneur STL
+
+<img src="/00illustrations/flux/choix.png" align="" height="auto" float="right">
