--- a/_posts/2017-06-23-cpp-Flux.markdown
+++ b/_posts/2017-06-23-cpp-Flux.markdown
@@ -9,6 +9,9 @@ tags: cpp
 finished: false
 ---
 
+## Sources
+Slide du cours: 1240.2.09 Bibliothèque Standard
+
 ## 1. Flux
 
 * Un flux est une **séquence d'octets transférés** entre la mémoire et les périphériques. 
