--- a/_posts/2017-06-23-cpp-Flux.markdown
+++ b/_posts/2017-06-23-cpp-Flux.markdown
@@ -10,7 +10,7 @@ finished: false
 ---
 
 ## Sources
-Slide du cours: 1240.2.09 Bibliothèque Standard
+Slide du cours C++ He-arc: 1240.2.09 Bibliothèque Standard
 
 ## 1. Flux
 
