--- a/_posts/2017-06-23-cpp-Flux.markdown
+++ b/_posts/2017-06-23-cpp-Flux.markdown
@@ -10,7 +10,9 @@ finished: false
 ---
 
 ## Sources
+
 Slide du cours C++ He-arc: 1240.2.09 Bibliothèque Standard
+[cppref](http://en.cppreference.com/w/)
 
 ## 1. Flux
 
