--- a/_posts/2017-06-23-cpp-Flux.markdown
+++ b/_posts/2017-06-23-cpp-Flux.markdown
@@ -9,6 +9,9 @@ tags: cpp
 finished: false
 ---
 
+![alt](/00illustrations/exam.png)
+
+
 ## Sources
 
 Slide du cours C++ He-arc: 1240.2.09 Bibliothèque Standard
