--- a/_posts/2017-06-23-cpp-STL.markdown
+++ b/_posts/2017-06-23-cpp-STL.markdown
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: "Cpp: Flux"
-subtitle:  Flux et fichiers
+title: "Cpp: STL"
+subtitle:  Librairie standard
 date: 2017-06-23
 author: Sol
 category: Cpp
@@ -9,7 +9,7 @@ tags: cpp
 finished: false
 ---
 
-![alt](/00illustrations/exam.png)
+![alt](/00illustrations/flux/exam.png)
 
 
 ## Sources
